--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,4 +1,18 @@
 FROM nginx:1.11.13-alpine
+RUN apk add --no-cache --virtual .run-deps \
+    ca-certificates bash wget \
+    && update-ca-certificates
 RUN echo "daemon off;" >> /etc/nginx/nginx.conf \
  && sed -i 's/^http {/&\n    server_names_hash_bucket_size 128;/g' /etc/nginx/nginx.conf
 
+ENV NGINX_INGRESS_VERSION 1.0.0
+RUN wget -q https://github.com/wanghaibo/swarm-service-nginx-ingress/releases/download/$NGINX_INGRESS_VERSION/swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz \
+ && tar -C /usr/local/bin -xvzf swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz  \
+  && rm /swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz 
+
+COPY . /app/
+WORKDIR /app/
+
+ENV DOCKER_HOST unix:///tmp/docker.sock
+
+ENTRYPOINT ["/app/docker-entrypoint.sh"]
