--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -6,9 +6,10 @@ RUN echo "daemon off;" >> /etc/nginx/nginx.conf \
  && sed -i 's/^http {/&\n    server_names_hash_bucket_size 1024;\n    server_names_hash_max_size 1024;/g' /etc/nginx/nginx.conf
 
 ENV NGINX_INGRESS_VERSION 1.0.1
-RUN wget -q https://github.com/wanghaibo/swarm-service-nginx-ingress/releases/download/$NGINX_INGRESS_VERSION/swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz \
- && tar -C /usr/local/bin -xvzf swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz  \
-  && rm /swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz 
+#RUN wget -q https://github.com/wanghaibo/swarm-service-nginx-ingress/releases/download/$NGINX_INGRESS_VERSION/swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz \
+# && tar -C /usr/local/bin -xvzf swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz  \
+#  && rm /swarm-service-nginx-ingress-alpine-linux-amd64-$NGINX_INGRESS_VERSION.tar.gz 
+COPY ./swarm-service-nginx-ingress /usr/local/bin/
 
 COPY . /app/
 WORKDIR /app/
